2007-02-12  Guenther Noack <guenther@unix-ag.uni-kl.de>
	
	* config.sh: Fix missing fontconfig dependency check
	  and compiler flag addition
	* bindings/poppler_splash_renderer.cc: Fix "distorted colors" bug
	  in the 'Splash' renderer. (The renderer used when *not* using Cairo.)

2006-11-21  Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Apply patch for cairo on poppler-0.5 from Jason Clouse <jhclouse _at chartet . net>.

2006-09-27  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Updated to include etoile.make in order to export the 
	framework as a dependency.

2006-09-17  Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add patch for Poppler 0.5 by Rob Burns <rburns _AT paiges net>
	* Tested on poppler 0.4.5 and 0.5.1

2006-09-16  Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Import from ImageApps.
