@@ -1,3 +1,7 @@
+2007-02-17  Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Disable Cairo support for now.
+
 2007-02-12  Guenther Noack <guenther@unix-ag.uni-kl.de>
 	
 	* config.sh: Fix missing fontconfig dependency check
